feat: associate clearances with a strong auth user

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -374,5 +374,34 @@
     "dsp_result_invalid_sig": "DSP result for operation {{opid}} had an invalid signature. {{e}}",
     "failed_to_apply_xr": "Failed to apply cross references received from operation {{opid}} to the local DSAIT. {{e}}",
     "filtered_cross_refs": "Filtered out {{count}} cross references from DSP response for operation {{opid}}.",
-    "name_found": "The name found for invocation {{iid}} was {{dn}}."
+    "name_found": "The name found for invocation {{iid}} was {{dn}}.",
+
+    "verify_attr_cert@not_before": "Attribute certification path asserted by {{host}} is not valid yet.",
+    "verify_attr_cert@not_after": "Attribute certification path asserted by {{host}} expired.",
+    "verify_attr_cert@missing_base_cert": "Attribute certification path asserted by {{host}} is missing the base certificate.",
+    "verify_attr_cert@holder_mismatch": "Attribute certification path asserted by {{host}} does not identify bound entry as the holder.",
+    "verify_attr_cert@unsupported_holder_digest": "Attribute certification path asserted by {{host}} used an unsupported digest algorithm to identify the holder.",
+    "verify_attr_cert@unsupported_holder_digested_object": "Attribute certification path asserted by {{host}} used an unsupported digested object type to identify the holder.",
+    "verify_attr_cert@no_assertion": "Attribute certification path asserted by {{host}} uses a noAssertion extension in the end-entity certificate, indicating that it may not be used.",
+    "verify_attr_cert@no_soa_cert": "Attribute certification path asserted by {{host}} does not have a certificate that is identifiable as an SOA.",
+    "verify_attr_cert@untrusted_soa": "Attribute certification path asserted by {{host}} does not have a trusted SOA certificate.",
+    "verify_attr_cert@internal_error": "Attribute certification path asserted by {{host}} failed verification due to an internal error.",
+    "verify_attr_cert@unusable_ac_path": "Attribute certification path asserted by {{host}} is unusable, most likely due to being too parse in information.",
+    "verify_attr_cert@invalid_delegation": "Attribute certification path asserted by {{host}} contains invalid delegation.",
+    "verify_attr_cert@unsupported_sig_alg": "Attribute certification path asserted by {{host}} uses an unsupported signature algorithm.",
+    "verify_attr_cert@invalid_signature": "Attribute certification path asserted by {{host}} had an invalid signature.",
+    "verify_attr_cert@single_use": "Attribute certification path asserted by {{host}} is authorized for a single usage, and it was used once already.",
+    "verify_attr_cert@acert_revoked": "Attribute certification path asserted by {{host}} contained a certificate that was revoked.",
+    "verify_attr_cert@invalid_target": "Attribute certification path asserted by {{host}} is not authorized for assertion to this DSA.",
+    "verify_attr_cert@invalid_time_spec": "Attribute certification path asserted by {{host}} is not authorized for usage at this time because of the timeSpecification extension.",
+    "verify_attr_cert@ambiguous_group": "Attribute certification path asserted by {{host}} identifies an ambiguous group.",
+    "verify_attr_cert@not_group_member": "Attribute certification path asserted by {{host}} failed verification because the asserting party is not a member of the holder group.",
+    "verify_attr_cert@duplicate_ext": "Attribute certification path asserted by {{host}} contained a duplicate extension.",
+    "verify_attr_cert@unknown_crit_ext": "Attribute certification path asserted by {{host}} contained an unrecognized critical extension.",
+    "verify_attr_cert@invalid_ext_crit": "Attribute certification path asserted by {{host}} contained an extension with an invalid criticality.",
+    "verify_attr_cert@crl_revoked": "Attribute certification path asserted by {{host}} contained a certificate that was revoked in a CRL.",
+    "verify_attr_cert@ocsp_other": "Attribute certification path asserted by {{host}} could not be verified due to an error in checking OCSP.",
+    "verify_attr_cert@ocsp_revoked": "Attribute certification path asserted by {{host}} was revoked according to OCSP.",
+    "attr_cert_path_not_verified": "Attribute certification path asserted by {{host}} was not verified, because it contained no clearance attributes.",
+    "attr_cert_path_unsupported": "Attribute certification path asserted by {{host}} could not be verified because it uses a delegation path. Meerkat DSA only supports verifying a single, directly-issued attribute certificate."
 }
