--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -410,5 +410,6 @@
     "reverse_dsa_bind_bound_name_mismatch": "Remote DSA's bound name does not match the requested AE title.",
     "reverse_dsa_bind_auth_fail": "Reverse DSA bind credentials are invalid.",
     "reverse_dsa_bind_other_err": "Reverse DSA bind failed: {{e}}",
-    "reverse_dsa_bind_auth_required": "The DSA bind result did not include credentials, but the local DSA requires mutual authentication."
+    "reverse_dsa_bind_auth_required": "The DSA bind result did not include credentials, but the local DSA requires mutual authentication.",
+    "reverse_dsa_bind_auth_optional": "Reverse DSA bind credentials were not supplied or invalid, but the local DSA is configured to ignore this."
 }
