feat: log error when validating reverse bind creds

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -408,7 +408,7 @@
     "reverse_dsa_bind_auth_unacceptable": "Reverse DSA bind credentials were unacceptable: simple authentication may not be used.",
     "reverse_dsa_bind_established_no_bound_dn": "Reverse DSA bind credentials did not establish a bound DN.",
     "reverse_dsa_bind_bound_name_mismatch": "Remote DSA's bound name does not match the requested AE title.",
-    "reverse_dsa_bind_auth_fail": "Reverse DSA bind credentials are invalid.",
+    "reverse_dsa_bind_auth_fail": "Reverse DSA bind credentials are invalid: {{e}}",
     "reverse_dsa_bind_other_err": "Reverse DSA bind failed: {{e}}",
     "reverse_dsa_bind_auth_required": "The DSA bind result did not include credentials, but the local DSA requires mutual authentication.",
     "reverse_dsa_bind_auth_optional": "Reverse DSA bind credentials were not supplied or invalid, but the local DSA is configured to ignore this."
