--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -48,6 +48,7 @@
     "change_password_incorrect": "Connection {{cid}} supplied an incorrect password to changePassword operation on entry {{uuid}}.",
     "family_subset_had_zero_members": "Family subset had zero members. This is not supposed to ever happen.",
     "invalid_init_js": "Invalid MEERKAT_INIT_JS file. It must export a function named 'init' or 'default'.",
+    "invalid_config_js": "Invalid Meerkat config file. It must be an ESM module and export a function named 'default'.",
     "bulk_insert_mode": "You are running Meerkat DSA in bulk insert mode. This means that almost no schema validation or access controls will apply.",
     "no_dsa_keypair": "Because the MEERKAT_SIGNING_CERTS_CHAIN_FILE and MEERKAT_SIGNING_KEY environment variables were not set, Meerkat DSA will not digitally sign server responses, and its Application Entity (AE) Title will not be set.",
     "starting_meerkat_version": "Starting up Meerkat DSA, version {{version}}.",
