doc: add man pages to debian package

--- a/doc/man/man5/meerkat.env.5
+++ b/doc/man/man5/meerkat.env.5
@@ -1,4 +1,4 @@
-.TH MEERKAT.ENV 1 "2025-12-26" "Meerkat DSA Configuration File" "Files"
+.TH MEERKAT.ENV 5 "2025-12-27" "Meerkat DSA" "File Formats"
 
 Meerkat DSA is configured via environment variables. Environment variables that
 are specific to Meerkat DSA are namespaced such that they all start with
