--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -111,6 +111,7 @@
     "unavailable_critical_extension": "Unavailable critical extension {{index}}.",
     "unrecognized_sort_key": "Critical sort key attribute type not recognized.",
     "not_authorized_ob": "Not authorized to request an operational binding. Required auth level: {{required}}. Had auth level: {{had}}.",
+    "not_authorized_disp": "Not authorized to perform shadow operations. Required auth level: {{required}}. Had auth level: {{had}}.",
     "invalid_attribute_syntax": "Invalid attribute syntax for type {{type}}.",
     "invalid_context_syntax": "Invalid context syntax for type {{type}}.",
     "attribute_already_exists": "Attribute of type {{type}} already exists.",
