feat(meerkat): replicate-everything shadowing

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -230,7 +230,7 @@
     "cpw_pwd_end": "Association {{aid}} attempted to change their password, and their password was correct, but their password expired beyond the point after which they cannot reset it themselves. Your administrative intervention may be needed to assist this user.",
     "add_entry": "Association {{aid}} created new entry: DB_ID={{id}}, DSE_UUID={{uuid}}, ENTRY_UUID={{euuid}}, DN='{{dn}}'",
     "mod_entry": "Association {{aid}} modified entry: DB_ID={{id}}, DSE_UUID={{uuid}}, ENTRY_UUID={{euuid}}, DN='{{dn}}'",
-    "auto_accepted_ob": "Automatically-accepted operational binding because you have MEERKAT_OB_AUTO_ACCEPT=1: OB_TYPE={{type}} OB_ID={{obid}} UUID={{uuid}}.",
+    "auto_accepted_ob": "Automatically-accepted operational binding because of your MEERKAT_OB_AUTO_ACCEPT setting: OB_TYPE={{type}} OB_ID={{obid}} UUID={{uuid}}.",
     "checking_remote_pwd": "Checking remote password asserted by {{source}} via chained compare operation.",
     "error_checking_remote_pwd": "Error checking remote password asserted by {{source}} via chained compare operation: {{e}}",
     "ob_modify_attempt_by_other_ae": "There was an attempt by {{impostor}} to modify an operational binding owned by {{owner}}: OB_TYPE={{type}} OB_ID={{obid}} UUID={{uuid}}.",
@@ -420,5 +420,28 @@
     "failed_to_update_gsr": "Failed to update governing structure rule for immediate superior: ",
     "failed_to_remove_hp": "Failed to remove hierarchyParent attribute from deleted entry: ",
     "failed_to_unbind": "Failed to unbind: ",
-    "failed_to_remove_subordinate": "Failed to remove subordinate DSE: "
+    "failed_to_remove_subordinate": "Failed to remove subordinate DSE: ",
+    "failed_to_bind_replicate_everything": "Failed to bind to shadow supplier DSA to establish shadowing agreement.",
+    "failed_to_delete_prev_replicate_everything": "Failed to delete previous 'replicate everything' shadowing operational bindings. Falling back on trying to soft-delete them. Error was {{e}}",
+    "failed_to_soft_delete_prev_replicate_everything": "Failed to soft-delete previous 'replicate everything' shadowing operational bindings, too. Aborting establishing the SOB. Error was: {{e}}",
+    "new_binding_id_changed": "Peer changed the operational binding ID in newBindingID. This is not allowed, but they already responded, so it is not clear how to proceed.",
+    "repl_everything_establish_timeout": "Attempt to establish shadowing operational binding to replicate everything timed out",
+    "repl_everything_establish_other_err": "Attempt to establish shadowing operational binding to replicate everything had some other problem. Info: {{e}}",
+    "repl_everything_establish_abort": "Got Abort code ({{code}}) when trying to establish shadowing operational binding to replicate everything",
+    "repl_everything_establish_reject": "Got Reject code ({{code}}) when trying to establish shadowing operational binding to replicate everything",
+    "repl_everything_establish_error": "Got Error code ({{code}}) when trying to establish shadowing operational binding to replicate everything",
+    "repl_everything_establish_sec_error": "Got Security Error problem ({{code}}) when trying to establish shadowing operational binding to replicate everything",
+    "repl_everything_establish_ob_error": "Got Operational Binding Error problem ({{code}}) when trying to establish shadowing operational binding to replicate everything",
+    "repl_everything_modify_timeout": "Attempt to modify shadowing operational binding to replicate everything timed out",
+    "repl_everything_modify_other_err": "Attempt to modify shadowing operational binding to replicate everything had some other problem. Info: {{e}}",
+    "repl_everything_modify_abort": "Got Abort code ({{code}}) when trying to modify shadowing operational binding to replicate everything",
+    "repl_everything_modify_reject": "Got Reject code ({{code}}) when trying to modify shadowing operational binding to replicate everything",
+    "repl_everything_modify_error": "Got Error code ({{code}}) when trying to modify shadowing operational binding to replicate everything",
+    "repl_everything_modify_sec_error": "Got Security Error problem ({{code}}) when trying to modify shadowing operational binding to replicate everything",
+    "repl_everything_modify_ob_error": "Got Operational Binding Error problem ({{code}}) when trying to modify shadowing operational binding to replicate everything",
+    "repl_everything_within_ss_but_no_hostname_ev": "Meerkat DSA is currently configured to replicate everything within a Kubernetes StatefulSet, but the HOSTNAME environment variable is missing (which is normally set by Kubernetes).",
+    "repl_everything_within_ss_but_no_ss": "Meerkat DSA is currently configured to replicate everything within a Kubernetes StatefulSet, but given its hostname, it does not appear that it is a member in a StatefulSet.",
+    "repl_everything_within_ss_i_am_master": "Meerkat DSA is currently configured to replicate everything within a Kubernetes StatefulSet, and this instance appears to be the master (hostname ending with '-0').",
+    "repl_everything_url_changed": "URL to replicate everything from changed, or corruption in the database. Establishing or modifying shadowing operational bindings accordingly.",
+    "repl_everything_url_unchanged": "URL to replicate everything has not changed. No changes to operational bindings needed."
 }
