--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -271,5 +271,6 @@
     "spkm_invalid_signature": "SPKM token had an invalid signature.",
     "spkm_untrusted_cert_path": "SPKM token had an untrusted certification path.",
     "unrecognized_external_auth_proc": "Unrecognized externalProcedure authentication mechanism.",
-    "ext_auth_invalid_peer_cert": "Invalid peer certificate: {{e}}"
+    "ext_auth_invalid_peer_cert": "Invalid peer certificate: {{e}}",
+    "alias_but_no_aen": "Alias entry is missing the aliasedEntryName attribute."
 }
