--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -123,6 +123,7 @@
     "parent_not_ancestor": "Hierarchy parent was not the ancestor of the compound entry of which it is a part.",
     "parent_not_entry": "Hierarchy parent was not an entry-type DSE.",
     "unsupported_auth_method": "Unsupported authentication method.",
+    "unsupported_sasl_auth_method": "Unsupported SASL authentication method '{{mechanism}}'.",
     "alias_problem": "Alias did not point to an existing entry.",
     "no_such_attribute_or_value": "The entry did not possess the selected values.",
     "not_supported_by_ldap": "Not supported by LDAP.",
