i18n(meerkat): better log messages for strong credentials verification

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -118,9 +118,33 @@
     "terminateOperationalBinding@succeeded": "Operational binding of type {{type}} and ID {{bid}} was terminated by association {{aid}}.",
     "could_not_establish_connection": "Could not establish connection with DSA '{{ae}}' to chain operation {{iid}}.",
     "could_not_establish_connection@with_error": "Could not establish connection with DSA '{{ae}}' to chain operation {{iid}} because of this error: {{e}}",
+    "strong_cred_error": "COULD_BAN={{host}}; Strong credentials error (unknown).",
     "strong_cred_error@malformed": "COULD_BAN={{host}}; Strong credentials malformed.",
     "strong_cred_error@untrusted": "COULD_BAN={{host}}; Strong credentials certification-path was not trusted.",
     "strong_cred_error@invalid_sig": "COULD_BAN={{host}}; Strong credentials had an invalid cryptographic signature.",
+    "strong_cred_error@key_usage": "COULD_BAN={{host}}; Strong credentials certification path did not authorize key usage for strong authentication.",
+    "strong_cred_error@pkup": "COULD_BAN={{host}}; Strong credentials used a private key that is not authorized to be used at this time.",
+    "strong_cred_error@disabled": "COULD_BAN={{host}}; Strong credentials signature verification is disabled.",
+    "strong_cred_error@crit_ext": "COULD_BAN={{host}}; Strong credentials used a critical X.509v3 extension that was not recognized or supported.",
+    "strong_cred_error@duplicate_ext": "COULD_BAN={{host}}; Strong credentials used a duplicate X.509v3 extension.",
+    "strong_cred_error@aki_ski_mismatch": "COULD_BAN={{host}}; Strong credentials used an Authority Key Identifier that did not match the Subject Key Identifier.",
+    "strong_cred_error@pkup_period": "COULD_BAN={{host}}; Strong credentials used a private key that is not authorized to be used at this time.",
+    "strong_cred_error@basic_constraints_ca": "COULD_BAN={{host}}; Strong credentials used a certificate that was signed by a non-authority.",
+    "strong_cred_error@basic_constraints_path_len": "COULD_BAN={{host}}; Strong credentials used a certificate that violated path length constraints.",
+    "strong_cred_error@invalid_ext_crit": "COULD_BAN={{host}}; Strong credentials used an extension that was critical when it should never be, or non-critical when it should always be.",
+    "strong_cred_error@untrusted_anchor": "COULD_BAN={{host}}; Strong credentials used a trust anchor that was untrusted by Meerkat DSA (check your configuration).",
+    "strong_cred_error@invalid_time": "COULD_BAN={{host}}; Strong credentials used a certificate that has either expired or has yet to become valid.",
+    "strong_cred_error@issuer_subject_mismatch": "COULD_BAN={{host}}; Strong credentials certification path had issuer-subject mismatch.",
+    "strong_cred_error@name_not_permitted": "COULD_BAN={{host}}; Strong credentials used a certificate that was signed by an authority that did not have explicit permission to sign for subjects within that namespace (a name constraints violation).",
+    "strong_cred_error@name_excluded": "COULD_BAN={{host}}; Strong credentials used a certificate that was signed by an authority that did not have explicit permission to sign for subjects within that namespace (a name constraints violation).",
+    "strong_cred_error@prohibited_sig_alg": "COULD_BAN={{host}}; Strong credentials used a certificate that was signed with a prohibited signature algorithm.",
+    "strong_cred_error@policy_not_acceptable": "COULD_BAN={{host}}; Strong credentials certification path policy was not acceptable to this DSA.",
+    "strong_cred_error@no_authorized_policies": "COULD_BAN={{host}}; Strong credentials certification path had no authorized policies.",
+    "strong_cred_error@no_basic_constraints_ca": "COULD_BAN={{host}}; Strong credentials certification path had no basic constraints for a CA.",
+    "strong_cred_error@ocsp_revoked": "COULD_BAN={{host}}; Strong credentials used a certificate that was revoked via OCSP.",
+    "strong_cred_error@ocsp_other": "COULD_BAN={{host}}; There was a problem obtaining the OCSP status for a certificate.",
+    "strong_cred_error@crl_revoked": "COULD_BAN={{host}}; Strong credentials used a certificate that was revoked via CRL.",
+    "strong_cred_error@crl_unreachable": "COULD_BAN={{host}}; There was a problem obtaining the CRL for a certificate.",
     "docs": "Documentation on Meerkat DSA can be found here: https://wildboar-software.github.io/directory/",
     "loaded_dsa_relationships": "Loaded DSA relationships.",
     "auth_failure_web_admin": "COULD_BAN={{host}}; Failed authentication in web admin portal.",
