feat(meerkat): better logging of superior dsa update failures

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -106,10 +106,14 @@
     "failed_to_update_superior_dsa": "Failed to update superior DSA with error {{e}}",
     "updated_superior_dsa": "Successfully updated superior DSA.",
     "establishing_hob_via_add_entry": "AddEntry.targetSystem instigated an attempt to create a HOB beneath DSE {{uuid}}.",
-    "invalid_new_id": "The superior DSA indicated that the operational binding ID was already in use. This DSA will increment it and attempt it again.",
-    "update_superior_dsa@oberror": "The superior DSA responded to an update with an operationalBindingError with problem {{problem}}.",
-    "update_superior_dsa@errcode": "The superior DSA responded to an update with an error having error code {{code}}.",
-    "update_superior_dsa@nocode": "The superior DSA responded to an update with an error without a code.",
+    "invalid_new_id": "Superior DSA {{aet}} indicated that the operational binding ID was already in use. This DSA will increment it and attempt it again.",
+    "update_superior_dsa@oberror": "Superior DSA {{aet}} responded to an update with an operationalBindingError with problem {{problem}}.",
+    "update_superior_dsa@errcode": "Superior DSA {{aet}} responded to an update with an error having error code {{code}}.",
+    "update_superior_dsa@nocode": "Superior DSA {{aet}} responded to an update with an error without a code.",
+    "update_superior_dsa@reject": "Superior DSA {{aet}} responded to an update with rejection with reason {{reason}}.",
+    "update_superior_dsa@abort": "Superior DSA {{aet}} responded to an update with an abort with reason {{reason}}.",
+    "update_superior_dsa@timeout": "Superior DSA {{aet}} update timed out.",
+    "update_superior_dsa@other": "Superior DSA {{aet}} update had some unknown error.",
     "establishOperationalBinding@started": "Operational binding of type {{type}} and ID {{bid}} establishment requested from association {{aid}}.",
     "modifyOperationalBinding@started": "Operational binding of type {{type}} and ID {{bid}} modification requested from association {{aid}}.",
     "terminateOperationalBinding@started": "Operational binding of type {{type}} and ID {{bid}} termination requested from association {{aid}}.",
